make workpackage creation more robust (#16266)
refs: https://github.com/metasfresh/metasfresh/issues/16258